--- a/files/商品详情/styles.css
+++ b/files/商品详情/styles.css
@@ -1331,6 +1331,7 @@
   position:absolute;
   left:13px;
   top:48px;
+  touch-action:none;
 }
 #u3767_state0 {
   position:relative;
@@ -3492,21 +3493,51 @@
   overflow:hidden;
   background-image:url('../../resources/images/transparent.gif');
 }
-#u3892 {
+#u3892_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:0px;
-  height:0px;
+  width:323px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#FF0000;
+}
+#u3892 {
+  position:absolute;
+  left:14px;
+  top:424px;
+  width:323px;
+  height:16px;
+  color:#FF0000;
 }
 #u3893 {
   position:absolute;
   left:0px;
   top:0px;
+  width:323px;
+  white-space:nowrap;
+}
+#u3894 {
+  position:absolute;
+  left:0px;
+  top:0px;
   width:0px;
   height:0px;
 }
-#u3894_div {
+#u3895 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u3896_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -3524,7 +3555,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u3894 {
+#u3896 {
   position:absolute;
   left:559px;
   top:223px;
@@ -3535,14 +3566,14 @@
   font-style:normal;
   font-size:12px;
 }
-#u3895 {
+#u3897 {
   position:absolute;
   left:0px;
   top:0px;
   width:73px;
   white-space:nowrap;
 }
-#u3896_div {
+#u3898_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -3556,14 +3587,14 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u3896 {
+#u3898 {
   position:absolute;
   left:421px;
   top:248px;
   width:338px;
   height:61px;
 }
-#u3897 {
+#u3899 {
   position:absolute;
   left:2px;
   top:22px;
@@ -3571,7 +3602,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u3898 {
+#u3900 {
   position:absolute;
   left:421px;
   top:248px;
@@ -3579,7 +3610,7 @@
   height:61px;
   overflow:hidden;
 }
-#u3898_state0 {
+#u3900_state0 {
   position:absolute;
   left:0px;
   top:0px;
@@ -3591,14 +3622,14 @@
   overflow-y:hidden;
   background-image:none;
 }
-#u3898_state0_content {
+#u3900_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u3899 {
+#u3901 {
   position:absolute;
   left:0px;
   top:0px;
@@ -3607,7 +3638,7 @@
   overflow:hidden;
   touch-action:none;
 }
-#u3899_state0 {
+#u3901_state0 {
   position:absolute;
   left:0px;
   top:0px;
@@ -3619,48 +3650,18 @@
   overflow-y:hidden;
   background-image:none;
 }
-#u3899_state0_content {
+#u3901_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u3900_div {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:49px;
-  height:15px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-size:12px;
-}
-#u3900 {
-  position:absolute;
-  left:16px;
-  top:10px;
-  width:49px;
-  height:15px;
-  font-size:12px;
-}
-#u3901 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:49px;
-  white-space:nowrap;
-}
 #u3902_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:65px;
+  width:49px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3673,9 +3674,9 @@
 }
 #u3902 {
   position:absolute;
-  left:11px;
-  top:35px;
-  width:65px;
+  left:16px;
+  top:10px;
+  width:49px;
   height:15px;
   font-size:12px;
 }
@@ -3683,14 +3684,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:65px;
+  width:49px;
   white-space:nowrap;
 }
 #u3904_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:49px;
+  width:65px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3703,9 +3704,9 @@
 }
 #u3904 {
   position:absolute;
-  left:116px;
-  top:10px;
-  width:49px;
+  left:11px;
+  top:35px;
+  width:65px;
   height:15px;
   font-size:12px;
 }
@@ -3713,14 +3714,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:49px;
+  width:65px;
   white-space:nowrap;
 }
 #u3906_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:50px;
+  width:49px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3733,9 +3734,9 @@
 }
 #u3906 {
   position:absolute;
-  left:115px;
-  top:35px;
-  width:50px;
+  left:116px;
+  top:10px;
+  width:49px;
   height:15px;
   font-size:12px;
 }
@@ -3743,14 +3744,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:50px;
+  width:49px;
   white-space:nowrap;
 }
 #u3908_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:25px;
+  width:50px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3763,9 +3764,9 @@
 }
 #u3908 {
   position:absolute;
-  left:219px;
-  top:10px;
-  width:25px;
+  left:115px;
+  top:35px;
+  width:50px;
   height:15px;
   font-size:12px;
 }
@@ -3773,14 +3774,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:25px;
+  width:50px;
   white-space:nowrap;
 }
 #u3910_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:36px;
+  width:25px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3793,9 +3794,9 @@
 }
 #u3910 {
   position:absolute;
-  left:220px;
-  top:35px;
-  width:36px;
+  left:219px;
+  top:10px;
+  width:25px;
   height:15px;
   font-size:12px;
 }
@@ -3803,14 +3804,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:36px;
+  width:25px;
   white-space:nowrap;
 }
 #u3912_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:49px;
+  width:36px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3823,9 +3824,9 @@
 }
 #u3912 {
   position:absolute;
-  left:311px;
-  top:10px;
-  width:49px;
+  left:220px;
+  top:35px;
+  width:36px;
   height:15px;
   font-size:12px;
 }
@@ -3833,14 +3834,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:49px;
+  width:36px;
   white-space:nowrap;
 }
 #u3914_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:36px;
+  width:49px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3853,9 +3854,9 @@
 }
 #u3914 {
   position:absolute;
-  left:318px;
-  top:35px;
-  width:36px;
+  left:311px;
+  top:10px;
+  width:49px;
   height:15px;
   font-size:12px;
 }
@@ -3863,14 +3864,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:36px;
+  width:49px;
   white-space:nowrap;
 }
 #u3916_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:49px;
+  width:36px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3883,9 +3884,9 @@
 }
 #u3916 {
   position:absolute;
-  left:414px;
-  top:10px;
-  width:49px;
+  left:318px;
+  top:35px;
+  width:36px;
   height:15px;
   font-size:12px;
 }
@@ -3893,14 +3894,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:49px;
+  width:36px;
   white-space:nowrap;
 }
 #u3918_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:73px;
+  width:49px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3913,9 +3914,9 @@
 }
 #u3918 {
   position:absolute;
-  left:518px;
+  left:414px;
   top:10px;
-  width:73px;
+  width:49px;
   height:15px;
   font-size:12px;
 }
@@ -3923,14 +3924,14 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:73px;
+  width:49px;
   white-space:nowrap;
 }
 #u3920_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:15px;
+  width:73px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -3943,9 +3944,9 @@
 }
 #u3920 {
   position:absolute;
-  left:431px;
-  top:35px;
-  width:15px;
+  left:518px;
+  top:10px;
+  width:73px;
   height:15px;
   font-size:12px;
 }
@@ -3953,10 +3954,40 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:15px;
+  width:73px;
   white-space:nowrap;
 }
 #u3922_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:15px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u3922 {
+  position:absolute;
+  left:431px;
+  top:35px;
+  width:15px;
+  height:15px;
+  font-size:12px;
+}
+#u3923 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:15px;
+  white-space:nowrap;
+}
+#u3924_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -3971,7 +4002,7 @@
   box-shadow:none;
   font-size:12px;
 }
-#u3922 {
+#u3924 {
   position:absolute;
   left:542px;
   top:35px;
@@ -3979,14 +4010,14 @@
   height:15px;
   font-size:12px;
 }
-#u3923 {
+#u3925 {
   position:absolute;
   left:0px;
   top:0px;
   width:25px;
   white-space:nowrap;
 }
-#u3924 {
+#u3926 {
   position:absolute;
   left:23px;
   top:170px;
@@ -3995,7 +4026,7 @@
   overflow:hidden;
   background-image:url('../../resources/images/transparent.gif');
 }
-#u3925 {
+#u3927 {
   position:absolute;
   left:136px;
   top:170px;
